医师动态图判断一张图片时超过多高添加限制。我的预约页面 ，优化没有数据时的刷新状态

--- a/wechat/src/main/webapp/xcview/html/physician/reserve_information.html
+++ b/wechat/src/main/webapp/xcview/html/physician/reserve_information.html
@@ -148,7 +148,9 @@
 				<div class="problem_description_title">诊疗问题</div>
 				<!--<textarea name="" id="" cols="" rows="" placeholder="请简单描述您的问题" class="textarea" onkeyup="this.value=this.value.replace(/\uD83C[\uDF00-\uDFFF]|\uD83D[\uDC00-\uDE4F]/g,'')"></textarea>-->
 
-				<textarea name="" id="" cols="" rows="" placeholder="请简单描述您的问题" class="textarea" onkeyup="value=value.replace(/[^\a-\z\A-\Z0-9\u4E00-\u9FA5\ ]/g,'')" onpaste="value=value.replace(/[^\a-\z\A-\Z0-9\u4E00-\u9FA5\ ]/g,'')" oncontextmenu = "value=value.replace(/[^\a-\z\A-\Z0-9\u4E00-\u9FA5\ ]/g,'')"></textarea>
+				<!--<textarea name="" id="" cols="" rows="" placeholder="请简单描述您的问题" class="textarea" onkeyup="value=value.replace(/[^\a-\z\A-\Z0-9\u4E00-\u9FA5\ ]/g,'')" onpaste="value=value.replace(/[^\a-\z\A-\Z0-9\u4E00-\u9FA5\ ]/g,'')" oncontextmenu = "value=value.replace(/[^\a-\z\A-\Z0-9\u4E00-\u9FA5\ ]/g,'')"></textarea>-->
+
+				<textarea name="" id="" cols="" rows="" placeholder="请简单描述您的问题" class="textarea" onkeyup="this.value=this.value.replace(/\uD83C[\uDF00-\uDFFF]|\uD83D[\uDC00-\uDE4F]/g,'')"></textarea>
 			</div>
 		</div>
 		<div class="both"></div>
