--- a/wechat/src/main/webapp/xcview/html/apprentice/apply.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apply.html
@@ -133,7 +133,7 @@
 <script> 
 	// 控制手机物理键--返回
 
-	window.onload = function(){
+	/*window.onload = function(){
 	  	if(window.history && window.history.pushState) {  
 	      	$(window).on('popstate', function() {  
 	          	var hashLocation = location.hash;  
@@ -142,13 +142,15 @@
 	          	if(hashName !== '') {  
 	              	var hash = window.location.hash;  
 	              	if(hash === '') {  
-	                  	//location.href ='/xcview/html/apprentice/inherited_introduction.html'  	/*跳转链接*/
+	                  	//location.href ='/xcview/html/apprentice/inherited_introduction.html'  	
+	                  	// 跳转链接
 	              		window.history.back();
 	              	}  
 	          	}  
 	      	});  
-	      	window.history.pushState('forward', null, './apply.html');    //引号里写当前页面地址,刷新当前页'	./inherited_introduction.html'
+	      	window.history.pushState('forward', null, './apply.html');    
+	      	//引号里写当前页面地址,刷新当前页'	./inherited_introduction.html'
 	  	}
-	};
+	};*/
 	</script>
 </html>
