远程诊疗--取消预约添加弹框。修改学堂返回事件

--- a/wechat/src/main/webapp/xcview/html/treatment.html
+++ b/wechat/src/main/webapp/xcview/html/treatment.html
@@ -166,6 +166,7 @@
 			</div>
 		</div>
 		{{/each}}
+		
 		</script>
 		</div>
 			</div>
@@ -186,6 +187,20 @@
 		</div>
 	</div>
 	<!-- 点击开始诊疗提示框结束 -->
+	<!-- 点击取消预约开始 -->
+		<div class="cancel">
+			<div class="cancel_bg"></div>
+			<div class="cancel_main">
+				<div class="cancel_main_title">是否取消预约</div>
+				<div class="cancel_bottom">
+					<div class="cancel_yes">是</div>
+					<div class="cancel_no">否</div>
+					<div class="both"></div>
+				</div>
+			</div>
+		</div>
+	<!-- 点击取消预约结束 -->
+	
 
 	<!-- 默认背景 -->
 	<div class="baseimagenumber">
