--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -984,8 +984,10 @@ if(browser.versions.mobile || browser.versions.ios || browser.versions.android |
 <!-- 微吼云 -->
 <script src="https://static.vhallyun.com/jssdk/dvideo-plugin.js?v=0.3"></script> 
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-player-1.0.0.js"></script>
+
+
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
-<script src="https://t-static01-open.e.vhall.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
+<!-- <script src="https://t-static01-open.e.vhall.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script> -->
 
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-chat-1.0.0.js?v=201801121522"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-base-1.0.0.js?v=201806271657"></script>
