远程诊疗提示修改

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1079,7 +1079,7 @@
 			<div class="therapy_title">
 				<span class="border"></span>
 				<span style="font-size: 0.28rem;float: left;">远程诊疗</span>
-				<span class="master_course_span">一个时段仅可一名弟子预约</span>
+				<span class="master_course_span">诊疗过程将以直播形式开展，仅弟子可预约</span>
 				<div class="both"></div>
 			</div>
 			<div class="subscribe_id">
