互动直播间修改，测试医师倒计时下架切换

--- a/wechat/src/main/webapp/xcview/html/broadcast_protocol.html
+++ b/wechat/src/main/webapp/xcview/html/broadcast_protocol.html
@@ -13,8 +13,6 @@
 <meta name="description" content="" />
 <!--手机嵌入模板-->
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
-
-<link rel="stylesheet" href="/xcview/css/my_bookings.css">
 <!-- 刷新引入js -->
 <script src="/xcview/js/common/jquery-2.1.4.min.js" type="text/javascript" charset="utf-8"></script>
 <!-- <script src="/xcviews/js/common/swiper.jquery.min-1.11.2.js" type="text/javascript" charset="utf-8"></script> -->
@@ -107,7 +105,7 @@
 <body style="background:#f0f0f0;">
 	<div class="protocol">
 		<!-- 头部开始 -->
-		<header>
+		<!-- <header>
 			<div class="protocol_header">
 				<div class="return" id="home_img"></div>
 				<div class="header_return" onclick="window.history.go(-1);">
@@ -115,7 +113,7 @@
 				</div>
 				<div class="header_title">远程诊疗直播协议</div>
 			</div>
-		</header>
+		</header> -->
 		<!-- 头部结束 -->
 
 		<!-- 中间内容开始 -->
