--- a/wechat/src/main/webapp/xcview/html/treatment.html
+++ b/wechat/src/main/webapp/xcview/html/treatment.html
@@ -149,7 +149,7 @@
 					<div class="theme_bottom" >
 						<div class="time">{{item.dateText}}</div>
 						{{if item.status == 4}}
-							<div class="check">查看诊疗视频</div>
+							<div class="check" onclick="foreshow('{{item.courseId}}')">查看诊疗视频</div>
 						{{else if item.status == 2}}
 							{{if item.start == false}}
 								<div class="delete delete_btn call_offs delete_{{item.id}}" data-id="{{item.id}}"><img src="/xcview/images/reservation.png" />取消预约</div>
