--- a/wechat/src/main/webapp/xcview/html/bought.html
+++ b/wechat/src/main/webapp/xcview/html/bought.html
@@ -131,7 +131,7 @@
 				</div>
 				<div class="bought_list_right">
 					<div class="bought_list_title">{{item.gradeName}}<br /><span class="span">{{item.name}}</span>
-					<div class="bought_list_size">共<span>{{item.courseNumber}}</span>集</div>
+					<div class="bought_list_size">共<span>{{item.courseNumber}}</span>集 已更新{{item.dirtyNumber}}集</div>
 						
 					</div>
 
