添加专辑跳转

--- a/wechat/src/main/webapp/xcview/html/school_audio.html
+++ b/wechat/src/main/webapp/xcview/html/school_audio.html
@@ -46,6 +46,20 @@
 		</div>-->
 
 	</div>
+
+	<!-- 点击查看专辑开始 -->
+	<div class="check">
+		<script type="text/html" id="check">
+		<div class="check_main">
+			<img src="{{smallImgPath}}" alt="" />
+			<div class="check_title">该课程属于专辑《{{gradeName}}》</div>
+			<div class="check_click">查看专辑</div>
+		</div>
+		<div class="both"></div>
+		</script>
+	</div>
+	<!-- 点击查看专辑结束 -->
+
 	<!--主讲人-->
 	<div class="speak_people" id="speak_people">
 		<script type="text/html" id="data_people">	
