修改BUG，医师认证富文本，银行卡提示，医馆认证信用码等

--- a/online-web/src/main/webapp/web/html/ResidentDoctor.html
+++ b/online-web/src/main/webapp/web/html/ResidentDoctor.html
@@ -590,6 +590,7 @@
              autoFloatEnabled: true,
              enableAutoSave:false,
              imagePopup:false,
+             autoFloatEnabled:false,
              maximumWords:10000       //允许的最大字符数
          });
          if(fn!=null){
