--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -1116,6 +1116,7 @@
 										</div>	
 										<div class="data-mune">
 											<div class="data-left-name">
+												<span>*</span>
 												身份信息
 											</div>
 											<select class="identity-select" id="identity-select"></select>	
