--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -668,7 +668,7 @@
 				{{else if item.type == 5}}
 				<!-- 课程-->
 				<div class="course_hide" data-id="{{item.courseId}}" data-status="{{item.courseStatus}}" data-teaching="{{item.teaching}}" style="padding-bottom: 0;margin-top: 0;">
-					<div class="course_nav_span comment_hide show-text" style="font-size: 0.3rem;color: #333333;">
+					<div class="course_nav_span comment_hide show-text" style="font-size: 0.3rem;color: #333333;margin-bottom: 0.2rem;">
 						{{if item.stick}}
 						<span class="stick_img_stick"><img src="/xcview/images/stick.png" alt="" />置顶</span>
 						{{/if}}
