--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -602,7 +602,7 @@
 												<p>线下课</p>
 											{{else if item.courseType == 1}}
 												{{if item.multimediaType == 1}}
-												<p>视频直课</p>
+												<p>视频直播</p>
 												{{else}}
 												<p>语音直播</p>
 												{{/if}}
@@ -1055,7 +1055,7 @@
 											<span class="see-inf-modal" data-index="{{i}}">查看</span>
 											{{else if item.status==4}}
 											<span class="see-inf-modal" data-index="{{i}}">查看</span>
-											<span>视频诊疗</span>
+											<span><a href="/web/liveCoursePage/{{item.id}}" target="_blank">视频诊疗</a></span>
 											{{else if item.status==5}}
 											<span class="appointment-delete" data-id="{{item.id}}" data-index="{{i}}">删除</span>
 											{{/if}}
