--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -1055,7 +1055,7 @@
 											<span class="see-inf-modal" data-index="{{i}}">查看</span>
 											{{else if item.status==4}}
 											<span class="see-inf-modal" data-index="{{i}}">查看</span>
-											<span><a href="/web/liveCoursePage/{{item.id}}" target="_blank">视频诊疗</a></span>
+											<span><a href="/web/liveCoursePage/{{item.courseId}}" target="_blank">视频诊疗</a></span>
 											{{else if item.status==5}}
 											<span class="appointment-delete" data-id="{{item.id}}" data-index="{{i}}">删除</span>
 											{{/if}}
@@ -2177,6 +2177,7 @@
 							<span><em>*</em>作者</span>
 							<input type="text" placeholder="请填写作者" class="zhuzuo_name work-author">
 							<p class="warning hide work-author-warning">作者不能为空</p>
+							<p class="warning hide work-author-warning-length">作者格式错误</p>
 						</div>
 
 						<div class="fengmian">
@@ -2316,6 +2317,7 @@
 							<span><em>*</em>作者</span>
 							<input type="text" placeholder="请填写作者" class="media_report_name media-author">
 							<p class="warning hide media-author-warning">作者不能为空</p>
+							<p class="warning hide media-author-warning-length">作者格式错误</p>
 						</div>
 
 						<div class="fengmian">
