删除--语音：上次看到这里了

--- a/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
+++ b/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
@@ -161,12 +161,13 @@
 							<li>课程语音永久保留，可重复回听</li>
 						</ul>
 					</div>
-					<div class="live_to">直播开始</div>
+					
 					<!-- 这段注释也要放到刷新里面 -->
 	                <div class="scroll-wrapper">
 	                	
 						<div class="main_time">10:02</div>
-	                    <p class="tips"><span>上次看到这里了</span></p>
+	                    <!-- <p class="tips"><span>上次看到这里了</span></p> -->
+	                    <div class="live_to">直播开始</div>
 	                    <script id="msg" type="text/html">
 	                        {{each list as value i}}
 	                            <div class="item"  data-message-id="{{value.id}}">
